# mina-extension

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  package.json  playwright.config.ts  rustfmt.toml
crates/mina-wallet-wasm/: Cargo.toml
crates/mina-wallet-wasm/src/: lib.rs
e2e/: tsconfig.json  types.d.ts
e2e/fixtures/: extension.ts
e2e/tests/: extension-load.spec.ts  popup-ui.spec.ts  provider-injection.spec.ts
extension/: tsconfig.json
extension/src/: manifest.json  popup.html
extension/src/pages/: onboarding.html
extension/src/scss/: popup.scss
extension/src/ts/: background.ts  content.ts  global.d.ts  inpage.ts  popup.ts  types.ts
extension/src/ts/lib/: accounts.ts  storage.ts  wasm.ts
